a new implementation with framework build by hacene